--- a/style.css
+++ b/style.css
@@ -23,9 +23,10 @@ h1 i {
 }
 .survey-form {
     background-color: #fff;
-    width: 500px;
+    max-width: 500px;
     margin: 0 auto;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,.2);
+    resize: vertical;
 }
 .survey-form .fields {
     position: relative;
@@ -315,5 +316,19 @@ h1 i {
     }
 ul.foodchecks li { 
     display:inline-block;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
     
