--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ h1 i {
     max-width: 500px;
     margin: 0 auto;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,.2);
-    resize: vertical;
 }
 .survey-form .fields {
     position: relative;
@@ -68,7 +67,6 @@ h1 i {
 }
 .survey-form input[type="text"]::placeholder, 
 .survey-form input[type="email"]::placeholder, 
-.survey-form input[type="tel"]::placeholder, 
 .survey-form input[type="date"]:invalid, 
 .survey-form textarea::placeholder,
 .survey-form select:invalid {
@@ -314,21 +312,17 @@ h1 i {
 .survey-form .group a{
     text-align: center;
     }
-ul.foodchecks li { 
-    display:inline-block;
-}
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.foodchecks {
+  text-align:left;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
+.foodchecks input{
+  margin: 0px 0px 0px 0px;
+}
+
+.foodchecks label{
+white-space: normal;
+  margin: 0px 0px 30px 0px;
+  display:inline-block;
 }
     
